feat: threejs demo 3d cube effect with ambient-light

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "three": "^0.166.1"
+    "three": "^0.166.1",
+    "three-stdlib": "^2.30.4"
   },
   "devDependencies": {
     "eslint": "^8",
