--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-three/drei": "^9.108.4",
     "@react-three/fiber": "^8.16.8",
     "next": "14.2.5",
+    "next-intl": "^3.17.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-flags-select": "^2.2.3",
+    "react-select": "^5.8.0",
     "three": "^0.166.1",
     "three-stdlib": "^2.30.4"
   },
@@ -21,6 +29,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "source-map-loader": "^1.0.0",
     "tailwindcss": "^3.4.1"
   }
 }
