--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@react-three/drei": "^9.108.4",
-    "@react-three/fiber": "^8.16.8",
-    "next": "14.2.5",
-    "next-intl": "^3.17.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^8.17.14",
+    "next": "^14.2.23",
+    "next-intl": "^3.26.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-flags-select": "^2.2.3",
     "react-select": "^5.8.0",
-    "three": "^0.166.1",
-    "three-stdlib": "^2.30.4"
+    "three": "^0.173.0",
+    "three-stdlib": "^2.35.13"
   },
   "devDependencies": {
     "eslint": "^8",
