--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-flags-select": "^2.2.3",
     "react-select": "^5.8.0",
     "three": "^0.173.0",
-    "three-stdlib": "^2.35.13"
+    "three-stdlib": "^2.35.13",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "eslint": "^8",
