--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.14",
+    "@react-three/postprocessing": "^2.19.1",
     "lucide-react": "^0.475.0",
     "next": "^14.2.23",
     "next-intl": "^3.26.3",
