--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.9",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8",
+    "postcss": "^8.5.3",
     "source-map-loader": "^1.0.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^4.0.9"
   }
 }
