--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-next": "14.2.5",
     "postcss": "^8.5.3",
     "source-map-loader": "^1.0.0",
+    "tailwind-scrollbar": "^4.0.1",
     "tailwindcss": "^4.0.9"
   }
 }
