--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-three/postprocessing": "^2.19.1",
     "lucide-react": "^0.475.0",
     "next": "^14.2.23",
+    "next-auth": "^4.24.11",
     "next-intl": "^3.26.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
