--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.14",
     "@react-three/postprocessing": "^2.19.1",
+    "bcryptjs": "^3.0.2",
     "lucide-react": "^0.475.0",
+    "mongoose": "^8.12.1",
     "next": "^14.2.23",
     "next-auth": "^4.24.11",
     "next-intl": "^3.26.3",
@@ -27,6 +29,7 @@
     "react-select": "^5.8.0",
     "three": "^0.173.0",
     "three-stdlib": "^2.35.13",
+    "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
