--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-flags-select": "^2.2.3",
     "react-select": "^5.8.0",
+    "swr": "^2.3.3",
     "three": "^0.173.0",
     "three-stdlib": "^2.35.13",
     "zod": "^3.24.2",
