--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/fiber": "^8.17.14",
     "@react-three/postprocessing": "^2.19.1",
     "bcryptjs": "^3.0.2",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.12.1",
     "next": "^14.2.23",
